--- a/index.html
+++ b/index.html
@@ -207,7 +207,9 @@
                 <span class="linebreak-desktop">시험에서 기하, 미적분 등 필요한 <br class="view-only-moblie" />단원의 문제만 골라 학습지를 만들어보세요.</span>
               </p>
               <figure class="home-tabpanel-section-media tabpanel1-3-wrap">
-                <img src="public/images/tabpanel1-section3-1.png" alt="" />
+                <img class="tabpanel1-3-frame" src="public/images/tabpanel1-section3-1.png" alt="" />
+                <img class="tabpanel1-3-1" src="public/images/tabpanel1-section3-1.png" alt="" />
+                <img class="tabpanel1-3-2" src="public/images/tabpanel1-section3-2.png" alt="" />
               </figure>
             </div>
           </article>
@@ -226,30 +228,30 @@
 
               <figure class="home-tabpanel-section-media tabpanel1-4-wrap">
                 <div class="tabpanel1-4-wrap-inbox">
-                  <div class="before-blur"></div>
+                  <div class="before-blur"><img src="public/images/tabpanel1-section4-blur-top.png" alt="" /></div>
                   <div class="viewer">
                     <div class="question">
-                      <img src="public/images/tabpanel1-section4-1.png" alt="" />
+                      <img class="drop-shadow" src="public/images/tabpanel1-section4-1.png" alt="" />
                       <img class="bookmark" src="public/images/tabpanel1-section4-bookmark.png" alt="" />
                     </div>
                     <div class="question">
-                      <img src="public/images/tabpanel1-section4-2.png" alt="" />
+                      <img class="drop-shadow" src="public/images/tabpanel1-section4-2.png" alt="" />
                       <img class="bookmark" src="public/images/tabpanel1-section4-bookmark.png" alt="" />
                     </div>
                     <div class="question">
-                      <img src="public/images/tabpanel1-section4-3.png" alt="" />
+                      <img class="drop-shadow" src="public/images/tabpanel1-section4-3.png" alt="" />
                       <img class="bookmark" src="public/images/tabpanel1-section4-bookmark.png" alt="" />
                     </div>
                     <div class="question">
-                      <img src="public/images/tabpanel1-section4-4.png" alt="" />
+                      <img class="drop-shadow" src="public/images/tabpanel1-section4-4.png" alt="" />
                       <img class="bookmark" src="public/images/tabpanel1-section4-bookmark.png" alt="" />
                     </div>
                     <div class="question">
-                      <img src="public/images/tabpanel1-section4-5.png" alt="" />
+                      <img class="drop-shadow" src="public/images/tabpanel1-section4-5.png" alt="" />
                       <img class="bookmark" src="public/images/tabpanel1-section4-bookmark.png" alt="" />
                     </div>
                   </div>
-                  <div class="after-blur"></div>
+                  <div class="after-blur"><img src="public/images/tabpanel1-section4-blur-bottom.png" alt="" /></div>
                 </div>
               </figure>
             </div>
