--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
     <script src="./build/bundle.js" defer></script> -->
 
     <link rel="stylesheet" type="text/css" href="public/stylesheets/style.css" />
-    <script type="module" src="public/javascripts/index.js"></script>
   </head>
   <body>
     <noscript>This website requires JavaScript.</noscript>
@@ -739,5 +738,7 @@
 
       document.addEventListener('DOMContentLoaded', detectBrowser)
     </script>
+
+    <script src="public/javascripts/index.js"></script>
   </body>
 </html>
