--- a/index.html
+++ b/index.html
@@ -739,6 +739,6 @@
       document.addEventListener('DOMContentLoaded', detectBrowser)
     </script>
 
-    <script src="public/javascripts/index.js"></script>
+    <script type="module" src="public/javascripts/index.js"></script>
   </body>
 </html>
