--- a/index.html
+++ b/index.html
@@ -180,14 +180,14 @@
             <div class="home-tabpanel-section-background tabpanel1-3-background">
               <img src="public/images/tabpanel1-section3-bg.png" alt="" />
 
-              <div style="width: 100%; height: 100%; position: relative">
+              <div style="width: 100%; max-width: 1624px; height: 100%; position: relative">
                 <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="" />
                 <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="" />
                 <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="" />
                 <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="" />
                 <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="" />
                 <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="" />
-                <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="" />
+                <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="" />
                 <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="" />
                 <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="" />
                 <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="" />
