--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                             <tspan class="donut-data" x="50%" text-anchor="middle">정답률</tspan>
                           </text>
                           <text y="64%" class="donut-percent-wrap">
-                            <tspan class="donut-percent js-counter1" x="50%" text-anchor="middle" data-number="69"></tspan>
+                            <tspan class="donut-percent js-counter1" x="50%" text-anchor="middle" data-number="69">0%</tspan>
                           </text>
                         </g>
                       </svg>
@@ -339,7 +339,7 @@
                             <tspan class="donut-data" x="50%" text-anchor="middle">정답률</tspan>
                           </text>
                           <text y="64%" class="donut-percent-wrap">
-                            <tspan class="donut-percent js-counter2" x="50%" text-anchor="middle" data-number="22"></tspan>
+                            <tspan class="donut-percent js-counter2" x="50%" text-anchor="middle" data-number="22">0%</tspan>
                           </text>
                         </g>
                       </svg>
@@ -358,7 +358,7 @@
                             <tspan class="donut-data" x="50%" text-anchor="middle">정답률</tspan>
                           </text>
                           <text y="64%" class="donut-percent-wrap">
-                            <tspan class="donut-percent js-counter3" x="50%" text-anchor="middle" data-number="78"></tspan>
+                            <tspan class="donut-percent js-counter3" x="50%" text-anchor="middle" data-number="78">0%</tspan>
                           </text>
                         </g>
                       </svg>
@@ -377,7 +377,7 @@
                             <tspan class="donut-data" x="50%" text-anchor="middle">정답률</tspan>
                           </text>
                           <text y="64%" class="donut-percent-wrap">
-                            <tspan class="donut-percent js-counter4" x="50%" text-anchor="middle" data-number="47"></tspan>
+                            <tspan class="donut-percent js-counter4" x="50%" text-anchor="middle" data-number="47">0%</tspan>
                           </text>
                         </g>
                       </svg>
@@ -396,7 +396,7 @@
                             <tspan class="donut-data" x="50%" text-anchor="middle">정답률</tspan>
                           </text>
                           <text y="64%" class="donut-percent-wrap">
-                            <tspan class="donut-percent js-counter5" x="50%" text-anchor="middle" data-number="70"></tspan>
+                            <tspan class="donut-percent js-counter5" x="50%" text-anchor="middle" data-number="70">0%</tspan>
                           </text>
                         </g>
                       </svg>
@@ -415,7 +415,7 @@
                             <tspan class="donut-data" x="50%" text-anchor="middle">정답률</tspan>
                           </text>
                           <text y="64%" class="donut-percent-wrap">
-                            <tspan class="donut-percent js-counter6" x="50%" text-anchor="middle" data-number="85"></tspan>
+                            <tspan class="donut-percent js-counter6" x="50%" text-anchor="middle" data-number="85">0%</tspan>
                           </text>
                         </g>
                       </svg>
