--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
           <img src="public/images/browser-icon.png" alt="" />
         </figure>
         <h1 class="browser-title">
-          이 사이트는 <em>인터넷 익스플로러</em>에서
-          <span class="linebreak-desktop">제공되지 않습니다.</span>
+          이 사이트는 <em>인터넷 익스플로러</em>에서<br />
+          제공되지 않습니다.
         </h1>
         <p class="browser-description">주소를 복사하여 크롬에서 열거나 크롬이 없으면 크롬을 설치한 후 열어주세요.</p>
         <a class="browser-button" href="https://www.google.co.kr/chrome/?brand=JJTC&gclid=CjwKCAjwm7mEBhBsEiwA_of-THl1NkSBMchm5Yhdq3VhweyuxDgoER3r7rN-s4Pg6u7W6nPCGnyLexoCJJwQAvD_BwE&gclsrc=aw.ds" target="_blank">크롬 설치하기</a>
@@ -180,7 +180,7 @@
             <div class="home-tabpanel-section-background tabpanel1-3-background">
               <img src="public/images/tabpanel1-section3-bg.png" alt="" />
 
-              <div style="width: 100%; max-width: 1624px; height: 100%; position: relative">
+              <div style="width: 100%; max-width: 1624px; height: 100%; position: relative; z-index: 0">
                 <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="" />
                 <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="" />
                 <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="" />
