--- a/index.html
+++ b/index.html
@@ -58,17 +58,19 @@
   <body>
     <noscript>This website requires JavaScript.</noscript>
 
-    <aside class="browser js-browser" role="complementary" hidden>
-      <div class="browser-inner">
-        <figure class="browser-icon">
-          <img src="public/images/browser-icon.png" alt="" />
-        </figure>
-        <h1 class="browser-title">
-          이 사이트는 <em>인터넷 익스플로러</em>에서<br />
-          제공되지 않습니다.
-        </h1>
-        <p class="browser-description">주소를 복사하여 크롬에서 열거나 크롬이 없으면 크롬을 설치한 후 열어주세요.</p>
-        <a class="browser-button" href="https://www.google.co.kr/chrome/?brand=JJTC&gclid=CjwKCAjwm7mEBhBsEiwA_of-THl1NkSBMchm5Yhdq3VhweyuxDgoER3r7rN-s4Pg6u7W6nPCGnyLexoCJJwQAvD_BwE&gclsrc=aw.ds" target="_blank">크롬 설치하기</a>
+    <aside class="browser-wrap js-browser" role="complementary" hidden>
+      <div class="browser">
+        <div class="browser-inner">
+          <figure class="browser-icon">
+            <img src="public/images/browser-icon.png" alt="" />
+          </figure>
+          <h1 class="browser-title">
+            이 사이트는 <em>인터넷 익스플로러</em>에서<br />
+            제공되지 않습니다.
+          </h1>
+          <p class="browser-description">주소를 복사하여 크롬에서 열거나 크롬이 없으면 크롬을 설치한 후 열어주세요.</p>
+          <a class="browser-button" href="https://www.google.co.kr/chrome/?brand=JJTC&gclid=CjwKCAjwm7mEBhBsEiwA_of-THl1NkSBMchm5Yhdq3VhweyuxDgoER3r7rN-s4Pg6u7W6nPCGnyLexoCJJwQAvD_BwE&gclsrc=aw.ds" target="_blank">크롬 설치하기</a>
+        </div>
       </div>
     </aside>
 
