--- a/apply.html
+++ b/apply.html
@@ -51,7 +51,7 @@
 
     <link rel="stylesheet" type="text/css" href="public/stylesheets/style.css" />
     <link rel="stylesheet" type="text/css" href="public/stylesheets/pages/apply.css" />
-    <script type="module" src="public/javascripts/index.js"></script>
+    <script type="module" src="public/javascripts/common.js"></script>
   </head>
   <body>
     <style></style>
@@ -64,10 +64,11 @@
       </section>
 
       <div class="apply-bgarea">
-        <section class="apply-hero">
-          <h1><img src="public/images/apply/apply-title.png" alt="" /></h1>
+        <section class="apply-hero js-observer">
+          <h1><img src="public/images/apply/apply-hero-title.png" alt="" /></h1>
+          <p><img src="public/images/apply/apply-hero-description.png" alt="" /></p>
           <figure>
-            <img src="public/images/apply/apply-image.png" alt="" />
+            <img src="public/images/apply/apply-hero-image.png" alt="" />
           </figure>
           <footer>
             <a class="apply-hero-cta js-hero-cta" href="">지금 바로 신청하러 가기 <img class="cta-arrow" src="public/icons/cta-arrow.svg" alt="" /></a>
