--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
     <link rel="stylesheet" type="text/css" href="public/stylesheets/style.css" />
     <script type="module" src="public/javascripts/index.js"></script>
+    <script type="module" src="public/javascripts/common.js"></script>
   </head>
   <body>
     <noscript>This website requires JavaScript.</noscript>
