--- a/apply.html
+++ b/apply.html
@@ -65,14 +65,26 @@
 
       <div class="apply-bgarea">
         <section class="apply-hero js-observer">
-          <h1><img src="public/images/apply/apply-hero-title.png" alt="" /></h1>
-          <p><img src="public/images/apply/apply-hero-description.png" alt="" /></p>
-          <figure>
-            <img src="public/images/apply/apply-hero-image.png" alt="" />
-          </figure>
-          <footer>
-            <a class="apply-hero-cta js-hero-cta" href="">지금 바로 신청하러 가기 <img class="cta-arrow" src="public/icons/cta-arrow.svg" alt="" /></a>
-          </footer>
+          <div class="apply-hero-inner">
+            <div class="apply-hero-objects">
+              <img src="public/images/apply/apply-hero-object1.png" alt="" />
+              <img src="public/images/apply/apply-hero-object2.png" alt="" />
+              <img src="public/images/apply/apply-hero-object3.png" alt="" />
+              <img src="public/images/apply/apply-hero-object4.png" alt="" />
+              <img src="public/images/apply/apply-hero-object5.png" alt="" />
+              <img src="public/images/apply/apply-hero-object6.png" alt="" />
+              <img src="public/images/apply/apply-hero-object7.png" alt="" />
+              <img src="public/images/apply/apply-hero-object8.png" alt="" />
+            </div>
+            <h1><img src="public/images/apply/apply-hero-title.png" alt="" /></h1>
+            <p><img src="public/images/apply/apply-hero-description.png" alt="" /></p>
+            <figure>
+              <img src="public/images/apply/apply-hero-image.png" alt="" />
+            </figure>
+            <footer>
+              <a class="apply-hero-cta js-hero-cta" href="">지금 바로 신청하러 가기 <img class="cta-arrow" src="public/icons/cta-arrow.svg" alt="" /></a>
+            </footer>
+          </div>
         </section>
 
         <section class="apply-intro js-observer">
