--- a/apply.html
+++ b/apply.html
@@ -66,7 +66,7 @@
       <div class="apply-bgarea">
         <section class="apply-hero js-observer">
           <div class="apply-hero-inner">
-            <div class="apply-hero-objects">
+            <div class="apply-hero-objects view-only-desktop">
               <img src="public/images/apply/apply-hero-object1.png" alt="" />
               <img src="public/images/apply/apply-hero-object2.png" alt="" />
               <img src="public/images/apply/apply-hero-object3.png" alt="" />
