--- a/index.html
+++ b/index.html
@@ -741,6 +741,25 @@
       }
 
       document.addEventListener('DOMContentLoaded', detectBrowser)
+
+      document.addEventListener('DOMContentLoaded', () => {
+        const videoElements = document.querySelectorAll('video')
+        if (videoElements) {
+          videoElements.forEach(videoElement => {
+            videoElement.parentNode.addEventListener('animationend', startInViewport(videoElement))
+          })
+          function startInViewport(element) {
+            // todo 구조가 바뀌면 문제생김.
+            // todo 1500 상수
+            const isObserved = element.parentNode.parentNode.parentNode.classList.contains('is-observed')
+            console.log(isObserved)
+            // if (!isObserved) return
+            setTimeout(() => {
+              element.play()
+            }, 1500)
+          }
+        }
+      })
     </script>
   </body>
 </html>
