--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 바로 원하는 단원과 유형을 선택할 수 있어요.
               </p>
               <figure class="home-tabpanel-section-media tabpanel1-1-wrap">
-                <video loop muted poster="public/videoes/tabpanel1-section1.png" preload="bbb" width="" preload="metadata" playsinline>
+                <video loop muted poster="" preload="bbb" width="" preload="metadata" playsinline>
                   <source src="public/videoes/tabpanel1-section1.mp4" type="video/mp4" />
                 </video>
               </figure>
