fix: preload on safari

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               </p>
               <figure class="home-tabpanel-section-media tabpanel1-2-wrap">
                 <div class="tabpanel1-2-wrap-inner">
-                  <video loop muted poster="public/videoes/tabpanel1-section2.png" preload="bbb" width="" preload="metadata" playsinline>
+                  <video loop muted poster="public/videoes/tabpanel1-section2.png" preload="auto" width="" preload="metadata" playsinline>
                     <source src="public/videoes/tabpanel1-section2.mp4" type="video/mp4" />
                   </video>
                 </div>
@@ -454,7 +454,7 @@
                 <span class="linebreak-desktop">회차별 채점 기록도 삭제되지 않고 모두 저장되어 확인할 수 있어요. </span>
               </p>
               <figure class="home-tabpanel-section-media tabpanel2-3-wrap">
-                <video loop muted poster="public/videoes/tabpanel2-section3.png" preload="bbb" width="" preload="metadata" playsinline>
+                <video loop muted poster="public/videoes/tabpanel2-section3.png" preload="auto" width="" preload="metadata" playsinline>
                   <source src="public/videoes/tabpanel2-section3.mp4" type="video/mp4" />
                 </video>
               </figure>
@@ -474,7 +474,7 @@
                 <span class="linebreak-desktop">한 반에 포함된 <br class="view-only-moblie" />학생들의 오답 학습지를 편하게 만들어 보세요. </span>
               </p>
               <figure class="home-tabpanel-section-media tabpanel2-4-wrap">
-                <video loop muted poster="public/videoes/tabpanel2-section4.png" preload="bbb" width="" preload="metadata" playsinline>
+                <video loop muted poster="public/videoes/tabpanel2-section4.png" preload="auto" width="" preload="metadata" playsinline>
                   <source src="public/videoes/tabpanel2-section4.mp4" type="video/mp4" />
                 </video>
               </figure>
@@ -555,7 +555,7 @@
                 구분하면서 체크해보세요.
               </p>
               <figure class="home-tabpanel-section-media tabpanel3-3-wrap">
-                <video loop muted poster="public/videoes/tabpanel3-section3.png" preload="bbb" width="" preload="metadata" playsinline>
+                <video loop muted poster="public/videoes/tabpanel3-section3.png" preload="auto" width="" preload="metadata" playsinline>
                   <source src="public/videoes/tabpanel3-section3.mp4" type="video/mp4" />
                 </video>
               </figure>
@@ -685,7 +685,7 @@
                 <span class="linebreak-desktop">한눈에 쉽게 확인할 수 있어요.</span>
               </p>
               <figure class="home-tabpanel-section-media tabpanel4-5-wrap">
-                <video loop muted poster="public/videoes/tabpanel4-section5.png" preload="bbb" width="" preload="metadata" playsinline>
+                <video loop muted poster="public/videoes/tabpanel4-section5.png" preload="auto" width="" preload="metadata" playsinline>
                   <source src="public/videoes/tabpanel4-section5.mp4" type="video/mp4" />
                 </video>
               </figure>
