--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 
     <div class="wrap js-wrap">
       <nav class="navbar js-navbar" role="navigation">
-        <!-- <div class="navbar-inner"> -->
-        <a class="navbar-logo" href="https://mathflat.com/"><img src="public/images/signature_logo_colored.png" alt="" /></a>
-        <div class="navbar-menu" role="navigation">
-          <a class="navbar-menu-item is-active" href="index.html">새로운 기능</a>
-          <a class="navbar-menu-item" href="apply.html">사용신청</a>
+        <div class="navbar-inner">
+          <a class="navbar-logo" href="https://mathflat.com/"><img src="public/images/signature_logo_colored.png" alt="" /></a>
+          <div class="navbar-menu" role="navigation">
+            <a class="navbar-menu-item is-active" href="index.html">새로운 기능</a>
+            <a class="navbar-menu-item" href="apply.html">사용신청</a>
+          </div>
         </div>
-        <!-- </div> -->
       </nav>
       <div class="navbar-backdrop js-navbar-backdrop"></div>
 
