--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <div class="home-tabpanel-section-background tabpanel1-3-background">
               <img src="public/images/tabpanel1-section3-bg.png" alt="" />
 
-              <div style="width: 100%; max-width: 1624px; height: 100%; position: relative; z-index: 0">
+              <div style="width: 80%; max-width: 1624px; height: 100%; margin: 0 10%; box-sizing: border-box; position: relative; z-index: 0">
                 <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="" />
                 <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="" />
                 <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="" />
