--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="browser">
         <div class="browser-inner">
           <figure class="browser-icon">
-            <img data-src="public/images/browser-icon.png" alt="" />
+            <img src="public/images/browser-icon.png" alt="" />
           </figure>
           <h1 class="browser-title">
             이 사이트는 <em>인터넷 익스플로러</em>에서<br />
@@ -101,9 +101,9 @@
           <a class="hero-cta js-hero-cta" href="apply.html">신청 방법 보러 가기 <img class="cta-arrow" src="public/icons/cta-arrow.svg" alt="" /></a>
           <div class="hero-object-group">
             <div class="hero-object-group-inner">
-              <figure class="hero-object1"><img data-src="public/images/hero-object1.png" alt="" /></figure>
-              <figure class="hero-object2"><img data-src="public/images/hero-object2.png" alt="" /></figure>
-              <figure class="hero-object3"><img data-src="public/images/hero-object3.png" alt="" /></figure>
+              <figure class="hero-object1"><img src="public/images/hero-object1.png" alt="" /></figure>
+              <figure class="hero-object2"><img src="public/images/hero-object2.png" alt="" /></figure>
+              <figure class="hero-object3"><img src="public/images/hero-object3.png" alt="" /></figure>
             </div>
           </div>
         </div>
@@ -748,7 +748,6 @@
           const userAgent = navigator.userAgent.toLowerCase()
           const isIEBrowser = userAgent.indexOf('msie') > -1 || userAgent.indexOf('trident') > -1
 
-          console.log('isIEBrowser', isIEBrowser)
           browserElement.hidden = !isIEBrowser
           wrapElement.hidden = isIEBrowser
         }
