--- a/index.html
+++ b/index.html
@@ -5,52 +5,25 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=1.0, viewport-fit=cover" />
-    <meta name="format-detection" content="telephone=no, email=no, address=no" />
-    <meta name="robots" content="noindex" />
-    <meta name="theme-color" content="rgba(255,255,255,.8)" />
 
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-stylnpe" content="black-translucent" />
-    <meta name="mobile-web-app-capable" content="yes" />
-
-    <meta name="msapplication-config" content="browserconfig.xml" />
-    <meta name="msapplication-square310x310logo" content="/icon_largetile.png" />
-
-    <meta name="author" content="soojubm" />
-    <meta name="subject" content="수줍이의 포트폴리오" />
-    <meta name="description" content="부끄러우니까 보지마요." />
+    <meta name="author" content="" />
+    <meta name="subject" content="" />
+    <meta name="description" content="" />
     <meta name="keywords" content="" />
     <meta name="copyright" content="soojubm" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:site_name" content="soojubm" />
     <meta property="og:url" content="" />
-    <meta property="og:title" content="수줍이의 포트폴리오" />
-    <meta property="og:image" content="/images/open-graph.png" />
+    <meta property="og:title" content="" />
+    <meta property="og:image" content="/favicon/open-graph.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:description" content="부끄러우니까 보지마요." />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@" />
-    <meta name="twitter:creator" content="soojubm" />
-    <meta name="twitter:url" content="" />
-    <meta name="twitter:title" content="수줍이의 포트폴리오" />
-    <meta name="twitter:description" content="부끄러우니까 보지마요." />
-    <meta name="twitter:image" content="https://example.com/image.jpg" />
+    <meta property="og:description" content="" />
 
-    <link rel="canonical" href="https://soojubm.github.io/" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/favicon.png" />
-    <link rel="apple-touch-icon" href="" />
-    <!-- 200x200 -->
-
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="format-detection" content="date=no" />
-    <meta name="format-detection" content="address=no" />
-    <meta name="format-detection" content="email=no" />
-
-    <!-- <script src=".public/javascripts/polyfill.js"></script>
-    <script src="./build/bundle.js" defer></script> -->
+    <link rel="icon" sizes="32x32" href="/favicon/favicon-32.png" />
+    <link rel="apple-touch-icon-precomposed" href="/favicon/favicon-180.png" />
+    <link rel="shortcut icon" sizes="196x196" href="/favicon/favicon-196.png" />
 
     <link rel="stylesheet" type="text/css" href="public/stylesheets/style.css" />
     <script type="module" src="public/javascripts/common.js"></script>
@@ -704,10 +677,10 @@
                 고객센터 1670-1930
               </span>
               <span class="footer-address-info-divider"></span>
-              <span class="footer-address-info-email">
+              <a class="footer-address-info-email" href="mailto:contact@mathflat.com" target="_blank">
                 <img src="public/images/footer_email.png" alt="" />
                 contact@mathflat.com
-              </span>
+              </a>
             </div>
           </address>
           <div class="footer-socials">
